--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@
   color: white !important;
   padding: 15px 40px 15px 40px !important;
   border: none;
+  border-radius: 0 !important;
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 20px;
@@ -191,7 +192,7 @@
   margin-left: 10px;
 }
 .inspiration-section {
-  background-color: #fcf8f3; /* Aapka bataya hua color */
+  background-color: #fcf8f3;
   padding: 80px 0;
   color: black;
   overflow: hidden;
@@ -208,6 +209,7 @@
   background-color: #b88e2f !important;
   color: white !important;
   border: none;
+   border-radius: 0 !important;
   padding: 12px 35px;
   font-weight: 600;
   margin-top: 25px;
